--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,11 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
+# Tab indentation for JS files
+[*.ts]
+indent_style = space
+indent_size = 2
+
 # Tab indentation for JSON files
 [*.json]
 indent_style = space
@@ -15,5 +20,10 @@ indent_size = 2
 
 # Tab indentation for JSX files
 [*.jsx]
+indent_style = space
+indent_size = 2
+
+# Tab indentation for JSX files
+[*.tsx]
 indent_style = space
 indent_size = 2
