--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/ui-template",
-  "version": "7.38.6",
+  "version": "7.38.6-beta.0e953df0",
   "private": true,
   "description": "Shared UI components for buffer apps",
   "keywords": [
@@ -35,30 +35,23 @@
     "build:lib": "concurrently 'yarn run build:commonjs' 'yarn run build:copy-files'",
     "build:commonjs": "cross-env NODE_ENV=production babel ./built/components --out-dir ./lib --ignore index.js",
     "build:copy-files": "node scripts/copyBuildFiles.js",
-
-
     "deploy:docs": "gh-pages -d build",
     "predeploy:docs": "yarn gen:docs && yarn build:typescript && yarn build:docs",
     "build:docs": "node scripts/build.js",
-
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "pkg:clean": "rushx pkg:sort && rushx pkg:depcheck",
     "pkg:depcheck": "depcheck",
     "pkg:sort": "sort-package-json",
-
     "publish": "./scripts/publish.sh",
-    "publish:beta": "node ./scripts/betaPublish.js",
-
+    "publish:beta": "./scripts/publishBeta.sh",
     "prestart": "yarn gen:docs && yarn build:typescript",
     "start": "concurrently 'yarn run start:docs' 'yarn run gen:docs-watch'",
     "start:docs": "node scripts/start.js",
     "gen:docs": "node scripts/generateComponentData.js",
     "gen:docs-watch": "yarn gen:docs -- --watch",
-
     "test": "jest",
     "test-update": "jest --no-coverage -u",
     "test-watch": "jest --no-coverage --watch",
-
     "component:new": "node ./scripts/newComponent.js",
     "gen:icons": "node ./scripts/generateIconComponents.js && eslint src/components/Icon/Icons/** --fix"
   },
@@ -166,8 +159,8 @@
     "style-loader": "0.23.0",
     "svgo": "1.1.1",
     "terser-webpack-plugin": "^4.1.0",
-    "ts-loader": "8.4.0",
     "ts-jest": "27.1.5",
+    "ts-loader": "8.4.0",
     "ts-migrate": "^0.1.35",
     "typescript": "4.9.5",
     "url-loader": "1.1.1",
