--- a/package.json
+++ b/package.json
@@ -96,14 +96,14 @@
   "devDependencies": {
     "@babel/cli": "7.1.5",
     "@babel/core": "7.1.6",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.1.0",
-    "@babel/preset-env": "7.1.6",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.16.7",
     "@balajmarius/svg2jsx": "^2.0.0",
     "@types/jest": "27.5.2",
-    "@types/node": "18.15.11",
+    "@types/node": "20.2.5",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.3.3",
@@ -111,27 +111,27 @@
     "@types/webpack-env": "1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
-    "async": "2.6.4",
+    "async": "^3.2.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^25.1.0",
-    "babel-loader": "8.0.4",
+    "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-named-asset-import": "0.2.3",
-    "babel-plugin-styled-components": "1.10.7",
+    "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-react-app": "6.1.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
-    "chokidar": "2.0.4",
+    "chokidar": "3.5.3",
     "concurrently": "~7.4.0",
     "cross-env": "5.2.0",
-    "css-loader": "1.0.0",
-    "depcheck": "~1.4.3",
-    "dotenv": "6.0.0",
+    "css-loader": "^5.2.4",
+    "depcheck": "1.4.3",
+    "dotenv": "10.0.0",
     "dotenv-expand": "4.2.0",
-    "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.7.0",
-    "eslint": "8.40.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "8.42.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "17.0.0",
     "eslint-loader": "2.1.1",
@@ -150,15 +150,15 @@
     "gh-pages": "2.0.1",
     "highlight.js": "10.4.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
-    "identity-obj-proxy": "3.0.0",
-    "inquirer": "6.2.1",
-    "jest": "27.4.2",
+    "identity-obj-proxy": "^3.0.0",
+    "inquirer": "7.3.3",
+    "jest": "~27.4.2",
     "jest-auto-snapshots": "=3.0.1",
     "jest-environment-jsdom": "^27.5.1",
     "jest-styled-components": "^7.0.5",
     "markdown-to-jsx": "^6.11.4",
-    "mini-css-extract-plugin": "0.4.3",
-    "node-fetch": "2.6.7",
+    "mini-css-extract-plugin": "^1.3.7",
+    "node-fetch": "2.6.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "ora": "3.0.0",
     "pnp-webpack-plugin": "1.1.0",
@@ -166,23 +166,23 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "prettier": "2.2.1",
-    "prop-types": "15.6.2",
+    "prettier": "2.8.8",
+    "prop-types": ">= 15.7.2",
     "raw-loader": "0.5.1",
     "react": "^16.8.6",
     "react-app-polyfill": "0.1.3",
     "react-clipboard.js": "2.0.2",
     "react-dev-utils": "6.1.1",
     "react-docgen": "2.14.0",
-    "react-dom": "^16.8.6",
-    "react-hot-loader": "4.6.3",
+    "react-dom": "16.14.0",
+    "react-hot-loader": "^4.13.0",
     "react-router-dom": "4.3.1",
     "react-test-renderer": "16.8.6",
     "resolve": "1.8.1",
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
-    "sort-package-json": "~2.4.1",
-    "style-loader": "0.23.0",
+    "sort-package-json": "2.4.1",
+    "style-loader": "^2.0.0",
     "svgo": "1.1.1",
     "terser-webpack-plugin": "^4.1.0",
     "ts-jest": "27.1.5",
@@ -191,15 +191,14 @@
     "typescript": "4.9.5",
     "url-loader": "1.1.1",
     "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "2.0.4",
+    "webpack-manifest-plugin": "5.0.0",
     "workbox-webpack-plugin": "3.6.3"
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
-    "react-dom": ">= 16.8.0",
-    "styled-components": "^5.3.0"
+    "react-dom": ">= 16.8.0"
   },
   "engines": {
     "node": ">=14.0.0"
