--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@babel/preset-react": "^7.16.7",
     "@balajmarius/svg2jsx": "^2.0.0",
     "@types/jest": "27.5.2",
+    "@types/prop-types": "15.7.5",
     "@types/node": "20.2.5",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.3",
