--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "babel-preset-react-app": "6.1.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
+    "chalk": "~4.1.0",
     "chokidar": "3.5.3",
     "concurrently": "~7.4.0",
     "cross-env": "5.2.0",
